tests/samples/negative/types/noncopy_string_copy.ax
module noncopy_string_copy;

import std.core.result as result;
import std.core.string as string;

fn run() -> result::Result<i32, i32> {
    var first: string::String = string::String.from_str("owned")?;
    var second: string::String = first;
    second.destroy();
    return Result.ok(0);
}

fn main() -> i32 {
    return match run() {
        .ok(code) => code,
        .err(code) => code,
    };
}
